force-app/main/default/objects/Account/fields/Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation__c</fullName>
    <label>Date de creation</label>
    <type>Date</type>
</CustomField>