force-app/main/default/objects/Account/fields/Evaluationn__c.field-meta.xml
<CustomField>
    <fullName>Evaluationn__c</fullName>
    <label>Evaluationn</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>