force-app/main/default/objects/Account/fields/Total_Projets__c.field-meta.xml
<CustomField>
    <fullName>Total_Projets__c</fullName>
    <label>Total Projets</label>
    <summarizedField>Project__c.Cout__c</summarizedField>
    <summaryForeignKey>Project__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>