force-app/main/default/objects/Account/recordTypes/Client_Etranger.recordType-meta.xml
<RecordType>
    <fullName>Client_Etranger</fullName>
    <active>true</active>
    <label>Client Etranger</label>
</RecordType>