force-app/main/default/objects/Account/recordTypes/Client_Locaux.recordType-meta.xml
<RecordType>
    <fullName>Client_Locaux</fullName>
    <active>true</active>
    <label>Client Locaux</label>
</RecordType>